# multimodal-emotion-detection

./: .gitignore  README.md  debug.sh  environment.yml  metrics.py  project.toml  pyproject.toml  run.slurm  sweep.sh
configs/: base.yaml
debugs/: slurm_48602271.err  slurm_48602305.err  slurm_48602336.err  slurm_48602498.err  slurm_48602686.err  slurm_48603412.err
grid_sweep_results/lr0p0005_drop0p0_mDrop0p0/: hyperparams.txt  metrics.csv  results.json
grid_sweep_results/lr0p0005_drop0p0_mDrop0p05/: confusion_matrix.npy  hyperparams.txt  results.json
grid_sweep_results/lr0p0005_drop0p1_mDrop0p0/: hyperparams.txt  results.json
grid_sweep_results/lr0p0005_drop0p1_mDrop0p05/: hyperparams.txt  results.json
logs/: ravdess_48568308.err  ravdess_48568313.err
outputs/2025-12-01/18-35-21/.hydra/: config.yaml  (+1 more)
slurm/: slurm_48568360.err  slurm_48568362.err  slurm_48574654.err  slurm_48576692.err  slurm_48576747.err  slurm_48576774.err  slurm_48577240.err  slurm_48577485.err  slurm_48578433.err  slurm_48578572.err  slurm_48592424.err  slurm_48592532.err  slurm_48592965.err  slurm_48592977.err  slurm_48593383.err  slurm_48593583.err  slurm_48593730.err  slurm_48597297.err  slurm_48598335.err  slurm_48599915.err  slurm_48599973.err  slurm_48599980.err  slurm_48599999.err  slurm_48603463.err  slurm_48605734.err  slurm_48605755.err  slurm_48609052.err  slurm_48609356.err  slurm_48609405.err  slurm_48610692.err  slurm_grid_48610055.err  slurm_grid_48617922.err
src/: attention.py  data.py  dataprocessing.py  debug.py  encoders.py  fusion.py  train.py  uncertainty.py
(+33 files in other folders)
