[project]
name = "multimodal-emotion-detection"
version = "0.1.0"
description = "Multimodal emotion detection with PyTorch and Lightning"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  # PyTorch stack (CPU-only by default when no CUDA extra is requested)
  "torch==2.0.1",
  "torchvision==0.15.2",
  "torchaudio==2.0.2",

  # Scientific computing
  "numpy==1.24.3",
  "scipy==1.10.1",
  "pandas==2.0.2",

  # Machine learning
  "scikit-learn==1.2.2",

  # Configuration management
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",

  # Experiment tracking & logging
  "tensorboard==2.13.0",
  "tqdm==4.65.0",

  # Visualization
  "matplotlib==3.7.1",
  "seaborn==0.12.2",

  # Audio + Video processing
  "librosa==0.10.1",
  "opencv-python==4.8.1.78",
  # If you need headless: "opencv-python-headless==4.8.1.78",

  # PyTorch Lightning
  "pytorch-lightning==2.0.3",
  "lightning==2.0.3",

  # Data handling
  "h5py==3.9.0",

  # Additional utilities
  "einops==0.6.1",
  "timm==0.9.2",
]


[tool.uv]
# Force a pre-1.0 soxr whenever anything asks for it
constraint-dependencies = ["soxr<1.0.0"]

[project.optional-dependencies]
dev = [
  "pytest==7.3.2",
  "pytest-cov==4.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
